# MiniTui

./: .gitignore  Cargo.toml  README.md  release.sh
releases/: README_Windows.md  minitui_windows_v1.7z  setup_windows.bat
src/: cli.rs  daemon.rs  gui.rs  ipc.rs  main.rs  player.rs  playlist.rs  theme.rs  tui.rs
